--- a/features/times/src/main/res/layout/vakit_sort_item.xml
+++ b/features/times/src/main/res/layout/vakit_sort_item.xml
@@ -30,9 +30,9 @@
         android:id="@+id/delete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
         android:padding="8dp"
         android:visibility="gone"
         app:materialIcon="delete"
@@ -40,15 +40,35 @@
         app:materialIconSize="24dp" />
 
 
+    <net.steamcrafted.materialiconlib.MaterialIconView
+        android:id="@+id/gps"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/city"
+        android:layout_alignBottom="@+id/city"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:contentDescription="@null"
+        android:scaleType="center"
+        android:visibility="gone"
+        app:materialIcon="crosshairs_gps"
+        app:materialIconColor="@color/foregroundSecondary"
+        app:materialIconSize="16dp" />
+
     <TextView
         android:id="@+id/city"
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/source"
-        android:layout_alignStart="@+id/source"
-        android:layout_alignLeft="@+id/source"
         android:layout_alignEnd="@+id/source"
         android:layout_alignRight="@+id/source"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_toEndOf="@+id/gps"
+        android:layout_toRightOf="@+id/gps"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
 
@@ -56,8 +76,8 @@
         android:id="@+id/source"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginLeft="10dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_toStartOf="@+id/handle"
         android:layout_toLeftOf="@+id/handle"
         android:layout_toEndOf="@+id/delete"
@@ -77,5 +97,6 @@
         app:materialIcon="reorder_horizontal"
         app:materialIconColor="@color/foregroundSecondary"
         app:materialIconSize="24dp" />
+
 
 </RelativeLayout>
