--- a/features/base/src/main/res/values/styles.xml
+++ b/features/base/src/main/res/values/styles.xml
@@ -61,7 +61,7 @@
 
 
     <style name="MyCard">
-        <item name="background">@color/background</item>
+        <item name="android:background">@color/background</item>
         <item name="android:translationZ" tools:ignore="NewApi">2dp</item>
         <item name="android:layout_marginLeft">5dp</item>
         <item name="android:layout_marginRight">5dp</item>
