--- a/features/times/src/main/res/layout/vakit_fragment.xml
+++ b/features/times/src/main/res/layout/vakit_fragment.xml
@@ -48,6 +48,20 @@
             app:layout_marginTopPercent="1%"
             app:layout_widthPercent="100%" />
 
+
+        <net.steamcrafted.materialiconlib.MaterialIconView
+            android:id="@+id/gps"
+            android:layout_alignTop="@+id/city"
+            android:layout_alignBottom="@+id/city"
+            android:layout_toStartOf="@+id/city"
+            android:layout_toLeftOf="@+id/city"
+            android:contentDescription="@null"
+            app:layout_aspectRatio="100%"
+            app:layout_heightPercent="5%"
+            app:layout_marginPercent="3%"
+            app:materialIcon="crosshairs_gps"
+            app:materialIconColor="@color/foregroundSecondary" />
+
         <com.metinkale.prayer.times.utils.AutoResizeTextView
             android:id="@+id/city"
             android:layout_width="wrap_content"
@@ -73,25 +87,25 @@
             android:id="@+id/fajr"
             android:layout_below="@id/hicri"
             android:fontFamily="sans-serif-light"
-            android:paddingEnd="0dp"
-            android:paddingLeft="50dp"
-            android:paddingRight="0dp"
             android:paddingStart="50dp"
+            android:paddingLeft="50dp"
+            android:paddingEnd="0dp"
+            android:paddingRight="0dp"
             android:text="@string/fajr"
             app:layout_heightPercent="9%"
             app:layout_widthPercent="50%" />
 
         <com.metinkale.prayer.times.utils.AutoResizeTextView
             android:id="@+id/fajrTime"
+            android:layout_below="@id/hicri"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:layout_below="@id/hicri"
             android:fontFamily="sans-serif-thin"
             android:gravity="end"
-            android:paddingEnd="50dp"
-            android:paddingLeft="0dp"
-            android:paddingRight="50dp"
             android:paddingStart="0dp"
+            android:paddingLeft="0dp"
+            android:paddingEnd="50dp"
+            android:paddingRight="50dp"
             android:text="00:00"
             app:layout_heightPercent="9%"
             app:layout_widthPercent="50%" />
@@ -100,25 +114,25 @@
             android:id="@+id/sun"
             android:layout_below="@id/fajr"
             android:fontFamily="sans-serif-light"
-            android:paddingEnd="0dp"
-            android:paddingLeft="50dp"
-            android:paddingRight="0dp"
             android:paddingStart="50dp"
+            android:paddingLeft="50dp"
+            android:paddingEnd="0dp"
+            android:paddingRight="0dp"
             android:text="@string/sun"
             app:layout_heightPercent="9%"
             app:layout_widthPercent="50%" />
 
         <com.metinkale.prayer.times.utils.AutoResizeTextView
             android:id="@+id/sunTime"
+            android:layout_below="@id/fajr"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:layout_below="@id/fajr"
             android:fontFamily="sans-serif-thin"
             android:gravity="end"
-            android:paddingEnd="50dp"
-            android:paddingLeft="0dp"
-            android:paddingRight="50dp"
             android:paddingStart="0dp"
+            android:paddingLeft="0dp"
+            android:paddingEnd="50dp"
+            android:paddingRight="50dp"
             android:text="00:00"
             app:layout_heightPercent="9%"
             app:layout_widthPercent="50%" />
@@ -127,25 +141,25 @@
             android:id="@+id/zuhr"
             android:layout_below="@id/sun"
             android:fontFamily="sans-serif-light"
-            android:paddingEnd="0dp"
-            android:paddingLeft="50dp"
-            android:paddingRight="0dp"
             android:paddingStart="50dp"
+            android:paddingLeft="50dp"
+            android:paddingEnd="0dp"
+            android:paddingRight="0dp"
             android:text="@string/zuhr"
             app:layout_heightPercent="9%"
             app:layout_widthPercent="50%" />
 
         <com.metinkale.prayer.times.utils.AutoResizeTextView
             android:id="@+id/zuhrTime"
+            android:layout_below="@id/sun"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:layout_below="@id/sun"
             android:fontFamily="sans-serif-thin"
             android:gravity="end"
-            android:paddingEnd="50dp"
-            android:paddingLeft="0dp"
-            android:paddingRight="50dp"
             android:paddingStart="0dp"
+            android:paddingLeft="0dp"
+            android:paddingEnd="50dp"
+            android:paddingRight="50dp"
             android:text="00:00"
             app:layout_heightPercent="9%"
             app:layout_widthPercent="50%" />
@@ -154,25 +168,25 @@
             android:id="@+id/asr"
             android:layout_below="@id/zuhr"
             android:fontFamily="sans-serif-light"
-            android:paddingEnd="0dp"
-            android:paddingLeft="50dp"
-            android:paddingRight="0dp"
             android:paddingStart="50dp"
+            android:paddingLeft="50dp"
+            android:paddingEnd="0dp"
+            android:paddingRight="0dp"
             android:text="@string/asr"
             app:layout_heightPercent="9%"
             app:layout_widthPercent="100%" />
 
         <com.metinkale.prayer.times.utils.AutoResizeTextView
             android:id="@+id/asrTime"
+            android:layout_below="@id/zuhr"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:layout_below="@id/zuhr"
             android:fontFamily="sans-serif-thin"
             android:gravity="end"
-            android:paddingEnd="50dp"
-            android:paddingLeft="0dp"
-            android:paddingRight="50dp"
             android:paddingStart="0dp"
+            android:paddingLeft="0dp"
+            android:paddingEnd="50dp"
+            android:paddingRight="50dp"
             android:text="00:00"
             app:layout_heightPercent="9%"
             app:layout_widthPercent="50%" />
@@ -181,25 +195,25 @@
             android:id="@+id/maghrib"
             android:layout_below="@id/asr"
             android:fontFamily="sans-serif-light"
-            android:paddingEnd="0dp"
-            android:paddingLeft="50dp"
-            android:paddingRight="0dp"
             android:paddingStart="50dp"
+            android:paddingLeft="50dp"
+            android:paddingEnd="0dp"
+            android:paddingRight="0dp"
             android:text="@string/maghrib"
             app:layout_heightPercent="9%"
             app:layout_widthPercent="50%" />
 
         <com.metinkale.prayer.times.utils.AutoResizeTextView
             android:id="@+id/maghribTime"
+            android:layout_below="@id/asr"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:layout_below="@id/asr"
             android:fontFamily="sans-serif-thin"
             android:gravity="end"
-            android:paddingEnd="50dp"
-            android:paddingLeft="0dp"
-            android:paddingRight="50dp"
             android:paddingStart="0dp"
+            android:paddingLeft="0dp"
+            android:paddingEnd="50dp"
+            android:paddingRight="50dp"
             android:text="00:00"
             app:layout_heightPercent="9%"
             app:layout_widthPercent="50%" />
@@ -208,25 +222,25 @@
             android:id="@+id/ishaa"
             android:layout_below="@id/maghrib"
             android:fontFamily="sans-serif-light"
-            android:paddingEnd="0dp"
-            android:paddingLeft="50dp"
-            android:paddingRight="0dp"
             android:paddingStart="50dp"
+            android:paddingLeft="50dp"
+            android:paddingEnd="0dp"
+            android:paddingRight="0dp"
             android:text="@string/ishaa"
             app:layout_heightPercent="9%"
             app:layout_widthPercent="50%" />
 
         <com.metinkale.prayer.times.utils.AutoResizeTextView
             android:id="@+id/ishaaTime"
+            android:layout_below="@id/maghrib"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:layout_below="@id/maghrib"
             android:fontFamily="sans-serif-thin"
             android:gravity="end"
-            android:paddingEnd="50dp"
-            android:paddingLeft="0dp"
-            android:paddingRight="50dp"
             android:paddingStart="0dp"
+            android:paddingLeft="0dp"
+            android:paddingEnd="50dp"
+            android:paddingRight="50dp"
             android:text="00:00"
             app:layout_heightPercent="9%"
             app:layout_widthPercent="50%" />
@@ -246,9 +260,9 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:layout_marginEnd="5dip"
             android:layout_marginStart="5dip"
             android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dip"
             android:adjustViewBounds="true"
             android:contentDescription="@string/appName"
             android:cropToPadding="true" />
@@ -257,11 +271,11 @@
             android:id="@+id/source1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_marginEnd="5dip"
+            android:layout_alignParentLeft="true"
             android:layout_marginStart="5dip"
             android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dip"
             android:adjustViewBounds="true"
             android:contentDescription="@string/appName"
             android:cropToPadding="true" />
