--- a/features/base/src/main/res/layout/drawer_list_item.xml
+++ b/features/base/src/main/res/layout/drawer_list_item.xml
@@ -18,9 +18,12 @@
     android:id="@android:id/text1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:drawablePadding="20dp"
     android:gravity="center_vertical"
     android:minHeight="50sp"
-    android:padding="10dp"
-    android:drawablePadding="20dp"
+    android:paddingStart="16dp"
+    android:paddingTop="8dp"
+    android:paddingRight="16dp"
+    android:paddingBottom="8dp"
     android:textColor="@color/foreground"
     android:textSize="16sp" />
