--- a/features/times/src/main/res/layout/vakit_sort_item.xml
+++ b/features/times/src/main/res/layout/vakit_sort_item.xml
@@ -46,10 +46,10 @@
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/city"
         android:layout_alignBottom="@+id/city"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
+        android:layout_toEndOf="@+id/delete"
+        android:layout_toRightOf="@+id/delete"
         android:contentDescription="@null"
         android:scaleType="center"
         android:visibility="gone"
@@ -59,7 +59,6 @@
 
     <TextView
         android:id="@+id/city"
-
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/source"
@@ -80,8 +79,8 @@
         android:layout_marginLeft="8dp"
         android:layout_toStartOf="@+id/handle"
         android:layout_toLeftOf="@+id/handle"
-        android:layout_toEndOf="@+id/delete"
-        android:layout_toRightOf="@+id/delete"
+        android:layout_toEndOf="@+id/gps"
+        android:layout_toRightOf="@+id/gps"
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
     <net.steamcrafted.materialiconlib.MaterialIconView
