--- a/features/settings/src/main/res/xml/settings.xml
+++ b/features/settings/src/main/res/xml/settings.xml
@@ -142,7 +142,7 @@
 
 
         <SwitchPreference
-            android:defaultValue="true"
+            android:defaultValue="false"
             android:key="ongoingIcon"
             android:title="@string/ongoingIcon" />
 
