--- a/features/times/src/main/res/layout/vakit_notprefs_item.xml
+++ b/features/times/src/main/res/layout/vakit_notprefs_item.xml
@@ -465,22 +465,19 @@
             app:materialIconColor="@color/foreground"
             app:materialIconSize="32dp" />
 
-        <SeekBar
+        <com.metinkale.prayer.times.utils.HorizontalNumberWheel
             android:id="@+id/timeAdjust"
-            style="@style/Widget.AppCompat.SeekBar.Discrete"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="32dp"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
-            android:max="360"
-            android:progress="180"
             app:layout_constraintEnd_toEndOf="parent"
-
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/fajrText" />
+
 
         <TextView
             android:id="@+id/timeText"
