--- a/features/compass/src/main/res/layout/compass_toast_menu.xml
+++ b/features/compass/src/main/res/layout/compass_toast_menu.xml
@@ -45,5 +45,5 @@
         android:background="@drawable/bubble"
         android:padding="10dp"
         android:text="@string/compass_type_reminder"
-        android:textColor="@color/background" />
+        android:textColor="@color/white" />
 </RelativeLayout>
