--- a/features/hadith/src/main/res/layout/hadis_main.xml
+++ b/features/hadith/src/main/res/layout/hadis_main.xml
@@ -15,9 +15,9 @@
   -->
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/pager"
@@ -37,13 +37,13 @@
         android:orientation="horizontal">
 
         <net.steamcrafted.materialiconlib.MaterialIconView
-            android:contentDescription="@null"
             android:id="@+id/left"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:contentDescription="@null"
             app:materialIcon="arrow_left"
-            app:materialIconColor="@color/background"
+            app:materialIconColor="#ffffff"
             app:materialIconSize="24dp" />
 
 
@@ -53,17 +53,17 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:textColor="@color/background"
+            android:textColor="#ffffff"
             android:textSize="18sp" />
 
         <net.steamcrafted.materialiconlib.MaterialIconView
-            android:contentDescription="@null"
             android:id="@+id/right"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:contentDescription="@null"
             app:materialIcon="arrow_right"
-            app:materialIconColor="@color/background"
+            app:materialIconColor="#ffffff"
             app:materialIconSize="24dp" />
     </LinearLayout>
 
