--- a/features/names/src/main/res/values/names.xml
+++ b/features/names/src/main/res/values/names.xml
@@ -16,7 +16,7 @@
 
 <resources>
     <string-array name="names_ar">
-        <item>اللَّه</item>
+        <item>هُوَ اللّٰهُ الَّذِي لَٓا اِلٰهَ اِلَّا هُوَ</item>
         <item>الرَّحْمَنُ</item>
         <item>الرَّحِيمُ</item>
         <item>الْمَلِكُ</item>
