--- a/features/base/src/main/res/layout/activity_base.xml
+++ b/features/base/src/main/res/layout/activity_base.xml
@@ -19,7 +19,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/background">
 
 
     <RelativeLayout
