--- a/features/base/src/main/res/layout/drawer_header.xml
+++ b/features/base/src/main/res/layout/drawer_header.xml
@@ -48,7 +48,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:text="@string/appName"
-        android:textColor="@color/background"
+        android:textColor="@color/white"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -66,7 +66,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:text="@string/version"
-        android:textColor="@color/backgroundSecondary"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -76,7 +76,7 @@
         android:layout_width="match_parent"
         android:layout_height="8dp"
         android:layout_marginTop="16dp"
-        android:background="#ffffff"
+        android:background="@color/background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/version" />
 
