--- a/features/base/src/main/res/values/colors.xml
+++ b/features/base/src/main/res/values/colors.xml
@@ -30,7 +30,9 @@
     <color name="foreground20pTrans">#33000000</color>
 
     <color name="alert">#f44336</color>
-    <color name="transparent">#00000000</color>-
+    <color name="transparent">#00000000</color>
+    <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
 
 
 </resources>
