--- a/features/compass/src/main/res/layout/calibration_dialog.xml
+++ b/features/compass/src/main/res/layout/calibration_dialog.xml
@@ -36,7 +36,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:materialIcon="close"
-            app:materialIconColor="@color/foregroundSecondary"
+            app:materialIconColor="#000000"
             app:materialIconSize="24dp" />
 
         <TextView
@@ -49,6 +49,7 @@
             android:layout_marginRight="8dp"
             android:text="@string/compassCalibrationTitle"
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+            android:textColor="#000000"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -62,6 +63,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
             android:text="@string/compassCalibrationSubTitle"
+            android:textColor="#000000"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/title" />
@@ -89,6 +91,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
             android:text="@string/accuracy"
+            android:textColor="#000000"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView" />
