--- a/features/compass/src/main/res/layout/compass_2d.xml
+++ b/features/compass/src/main/res/layout/compass_2d.xml
@@ -61,7 +61,7 @@
             android:gravity="center"
             android:text="@string/angle"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="@color/foregroundSecondary"
+            android:textColor="@color/foreground"
             android:textStyle="bold" />
 
         <TextView
@@ -76,7 +76,7 @@
             android:gravity="center"
             android:text="0°"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="@color/foregroundSecondary" />
+            android:textColor="@color/foreground" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -88,7 +88,7 @@
             android:gravity="center"
             android:text="@string/distance"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="@color/foregroundSecondary"
+            android:textColor="@color/foreground"
             android:textStyle="bold" />
 
         <TextView
@@ -103,7 +103,7 @@
             android:gravity="center"
             android:text="0 km"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="@color/foregroundSecondary" />
+            android:textColor="@color/foreground" />
 
 
         <View
