--- a/features/compass/src/main/res/layout/compass_qiblatime.xml
+++ b/features/compass/src/main/res/layout/compass_qiblatime.xml
@@ -55,7 +55,7 @@
             android:gravity="center"
             android:text="@string/angle"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="@color/foregroundSecondary"
+            android:textColor="@color/foreground"
             android:textStyle="bold" />
 
         <TextView
@@ -70,7 +70,7 @@
             android:layout_toLeftOf="@id/center"
             android:gravity="center"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="@color/foregroundSecondary" />
+            android:textColor="@color/foreground" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -82,7 +82,7 @@
             android:gravity="center"
             android:text="@string/distance"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="@color/foregroundSecondary"
+            android:textColor="@color/foreground"
             android:textStyle="bold" />
 
         <TextView
@@ -97,7 +97,7 @@
             android:text="0 km"
             android:gravity="center"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="@color/foregroundSecondary" />
+            android:textColor="@color/foreground" />
 
 
         <View
