--- a/features/times/src/main/res/layout/vakit_main.xml
+++ b/features/times/src/main/res/layout/vakit_main.xml
@@ -36,62 +36,61 @@
         android:id="@+id/pager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="30dp"
+        android:layout_below="@+id/holyday"
         android:layout_alignParentBottom="true"
-        android:layout_below="@+id/holyday" />
+        android:layout_marginBottom="30dp" />
 
 
     <View
-        android:layout_centerInParent="true"
-        android:layout_height="100dp"
+        android:id="@+id/center"
         android:layout_width="0dp"
-        android:id="@+id/center" />
+        android:layout_height="100dp"
+        android:layout_centerInParent="true" />
 
     <View
+        android:id="@+id/bottomSliderCloseHandler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/bottomSlider"
-        android:layout_alignParentTop="true"
-        android:id="@+id/bottomSliderCloseHandler" />
+        android:layout_alignParentTop="true" />
 
 
     <View
+        android:id="@+id/topSliderCloseHandler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentBottom="true"
         android:layout_below="@+id/topSlider"
-        android:id="@+id/topSliderCloseHandler" />
+        android:layout_alignParentBottom="true" />
 
     <com.metinkale.prayer.times.utils.MultipleOrientationSlidingDrawer
         android:id="@+id/bottomSlider"
-        android:layout_alignTop="@+id/center"
-        android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_alignTop="@+id/center"
+        android:layout_alignParentBottom="true"
         app:_orientation="bottom"
-        app:handle="@+id/footerText"
-        app:content="@+id/imsakiyeContainer">
+        app:content="@+id/imsakiyeContainer"
+        app:handle="@+id/footerText">
 
         <TextView
-            android:gravity="center"
             android:id="@+id/footerText"
             android:layout_width="match_parent"
             android:layout_height="30dip"
             android:layout_alignParentBottom="true"
             android:background="@color/colorPrimary"
             android:fontFamily="sans-serif-light"
+            android:gravity="center"
             android:text="@string/monthly"
-            android:textColor="@color/background"
+            android:textColor="#ffffff"
             android:textSize="20sp" />
 
         <FrameLayout
             android:id="@+id/imsakiyeContainer"
             android:layout_width="match_parent"
-            android:translationZ="2dp"
-            android:background="@color/background"
+            android:layout_height="match_parent"
             android:layout_gravity="bottom"
-            android:layout_height="match_parent">
-
+            android:background="@color/background"
+            android:translationZ="2dp">
 
 
         </FrameLayout>
@@ -99,26 +98,26 @@
 
     <com.metinkale.prayer.times.utils.MultipleOrientationSlidingDrawer
         android:id="@+id/topSlider"
-        android:layout_alignParentTop="true"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignBottom="@+id/center"
+        android:layout_alignParentTop="true"
         app:_orientation="top"
-        app:handle="@+id/handle"
-        app:content="@+id/settingsContainer">
+        app:content="@+id/settingsContainer"
+        app:handle="@+id/handle">
 
         <View
-            android:gravity="center"
             android:id="@+id/handle"
             android:layout_width="match_parent"
-            android:layout_height="30dip" />
+            android:layout_height="30dip"
+            android:gravity="center" />
 
         <FrameLayout
             android:id="@id/settingsContainer"
             android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_gravity="bottom"
-            android:translationZ="2dp"
-            android:layout_height="match_parent">
+            android:translationZ="2dp">
 
 
         </FrameLayout>
@@ -129,17 +128,17 @@
         android:id="@+id/addCity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginBottom="20dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
         android:layout_marginEnd="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="20dp"
         android:src="@drawable/ic_add_white_24dp"
-        app:borderWidth="0dp"
         app:backgroundTint="@color/alert"
+        app:borderWidth="0dp"
         app:elevation="6dp"
         app:fabSize="normal"
-        app:pressedTranslationZ="12dp"
-        android:layout_marginRight="20dp"
-        android:layout_alignParentRight="true" />
+        app:pressedTranslationZ="12dp" />
 </RelativeLayout>
 
