fixed multiple sounds in alarm

--- a/features/settings/src/main/res/xml/settings.xml
+++ b/features/settings/src/main/res/xml/settings.xml
@@ -176,7 +176,7 @@
 
 
         <SwitchPreference
-            android:defaultValue="false"
+            android:defaultValue="true"
             android:key="useAlarm"
             android:summary="@string/useAlarmDesc"
             android:title="@string/useAlarm" />
